Blender 2.70 - Blender crashes when enabling Mesh Analysis #39351

Closed
opened 2014-03-22 21:53:50 +01:00 by Richard Marklew · 10 comments

Operating System
iMac 2.8GHz i7, 16GB Ram
ATi Radeon HD 4850 512MB
OSX 10.9.2

Blender Version
Official 2.70 64bit
Also tested with buildbot version blender-2.70-85e0f69-OSX-10.6-x86_64.zip from 22nd March

With factory settings and default scene, blender crashes when enabling Mesh Analysis in properties panel
Demo video name

mesh_analysis_crash.blend

Operating System iMac 2.8GHz i7, 16GB Ram ATi Radeon HD 4850 512MB OSX 10.9.2 Blender Version Official 2.70 64bit Also tested with buildbot version blender-2.70-85e0f69-OSX-10.6-x86_64.zip from 22nd March With factory settings and default scene, blender crashes when enabling Mesh Analysis in properties panel Demo video [name ](https://www.youtube.com/watch?v=WvsDfdyOrVo) [mesh_analysis_crash.blend](https://archive.blender.org/developer/F82234/mesh_analysis_crash.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @RichardMarklew

Added subscriber: @RichardMarklew

Added subscriber: @mont29

Added subscriber: @mont29

Added subscribers: @ideasman42, @jensverwiebe, @ThomasDinges

Added subscribers: @ideasman42, @jensverwiebe, @ThomasDinges

Cannot confirm here (Debian64 testing, ATI HD5730M 1Go)…

Yet we had a similar report two weeks ago (#39116), with similar OS/hardware:

OS X Version 10.8.5
iMac 3.2 GHz Intel Core i3
4GB RAM
ATI Radeon HD 5670 512 MB

Could some of our OSX dev try to reproduce the issue? :)

Cannot confirm here (Debian64 testing, ATI HD5730M 1Go)… Yet we had a similar report two weeks ago (#39116), with similar OS/hardware: > OS X Version 10.8.5 > iMac 3.2 GHz Intel Core i3 > 4GB RAM > ATI Radeon HD 5670 512 MB Could some of our OSX dev try to reproduce the issue? :)
Member

I confirm this crash on OSX 10.9.2 too.
Gcc 4.8 build doess not crash here, investigating .....

Rough log:

Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
0 org.blenderfoundation.blender 0x0000000100ae4943 rgb_float_to_uchar + 51
1 org.blenderfoundation.blender 0x00000001007a02b3 BKE_editmesh_statvis_calc + 3859
2 org.blenderfoundation.blender 0x0000000100782b3a editbmesh_build_data + 2954
3 org.blenderfoundation.blender 0x000000010080419c BKE_object_handle_update_ex + 844
4 org.blenderfoundation.blender 0x000000010084940e scene_update_object_func + 270
5 org.blenderfoundation.blender 0x0000000100b171cf BLI_task_pool_work_and_wait + 143
6 org.blenderfoundation.blender 0x000000010084914b scene_update_objects + 363
7 org.blenderfoundation.blender 0x0000000100848715 scene_update_tagged_recursive + 85
8 org.blenderfoundation.blender 0x00000001008485be BKE_scene_update_tagged + 126
9 org.blenderfoundation.blender 0x000000010014b06d wm_event_do_notifiers + 1117
10 org.blenderfoundation.blender 0x0000000100147ce8 WM_main + 40
11 org.blenderfoundation.blender 0x0000000100143bba main + 1514
12 org.blenderfoundation.blender 0x0000000100002434 start + 52

Jens

I confirm this crash on OSX 10.9.2 too. Gcc 4.8 build doess not crash here, investigating ..... Rough log: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 org.blenderfoundation.blender 0x0000000100ae4943 rgb_float_to_uchar + 51 1 org.blenderfoundation.blender 0x00000001007a02b3 BKE_editmesh_statvis_calc + 3859 2 org.blenderfoundation.blender 0x0000000100782b3a editbmesh_build_data + 2954 3 org.blenderfoundation.blender 0x000000010080419c BKE_object_handle_update_ex + 844 4 org.blenderfoundation.blender 0x000000010084940e scene_update_object_func + 270 5 org.blenderfoundation.blender 0x0000000100b171cf BLI_task_pool_work_and_wait + 143 6 org.blenderfoundation.blender 0x000000010084914b scene_update_objects + 363 7 org.blenderfoundation.blender 0x0000000100848715 scene_update_tagged_recursive + 85 8 org.blenderfoundation.blender 0x00000001008485be BKE_scene_update_tagged + 126 9 org.blenderfoundation.blender 0x000000010014b06d wm_event_do_notifiers + 1117 10 org.blenderfoundation.blender 0x0000000100147ce8 WM_main + 40 11 org.blenderfoundation.blender 0x0000000100143bba main + 1514 12 org.blenderfoundation.blender 0x0000000100002434 start + 52 Jens

This issue was referenced by blender/blender-addons-contrib@58c22d8fe8

This issue was referenced by blender/blender-addons-contrib@58c22d8fe8d0399ecb137f0984b6fdb45fd57601

This issue was referenced by 58c22d8fe8

This issue was referenced by 58c22d8fe8d0399ecb137f0984b6fdb45fd57601
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 58c22d8fe8.

Closed by commit 58c22d8fe8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39351
No description provided.