Fix T39351: Blender crashes when enabling Mesh Analysis.

This code was using a //const// char array for fallback colors and then
writing to it (hidden to the compiler by explicit casting). Bad!